@@ -1,3 +1,5 @@
+#Properties of this specific CALIPH build
+#Thu, 11 Apr 2013 10:48:15 +0200
 #
 # This file is part of the LIRE project: http://www.semanticmetadata.net/lire
 # LIRE is free software; you can redistribute it and/or modify
@@ -40,5 +42,5 @@
 #Properties of this specific CALIPH build
 #Tue, 09 Apr 2013 13:39:22 +0200
 #Wed Sep 07 12:25:27 CEST 2011
-build-date=2013/04/09 13\:39
-build-number=160
+build-date=2013/04/11 10\:48
+build-number=161
